--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.juanjo.ejerciciostema4">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Ejercicio1Activity" />
-        <activity android:name=".Ejercicio2Activity"></activity>
+        <activity android:name=".Ejercicio2Activity" />
+        <activity android:name=".Ejercicio3Activity"></activity>
     </application>
 
 </manifest>
